--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=zoo
+spring.datasource.url=jdbc:mysql://localhost:3307/animal_database
+spring.datasource.username=user
+spring.datasource.password=password
